--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 webvtt-py = "^0.4.3"
+click = "^7.1.1"
+spacy = "^2.2.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
