--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "subtitlecore"
-version = "0.1.2"
-description = ""
+version = "0.1.3"
+description = "Parse srt file content into well-formed structures"
 authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 webvtt-py = "^0.4.3"
 click = "^7.1.1"
 spacy = "^2.2.4"
@@ -14,7 +14,8 @@ spacy = "^2.2.4"
 pytest = "^5.2"
 
 [tool.poetry.scripts]
-parse2sens = "subtitlecore.parse2sens:run" 
+parse2sens = "subtitlecore.entry:parse2sens"
+parse2text = "subtitlecore.entry:parse2text"
 
 
 [build-system]
