--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,18 @@ authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
 python = "^3.8"
 webvtt-py = "^0.4.3"
 click = "^7.1.1"
-spacy = "^2.2.4"
+Sphinx = "^3.5.3"
+sphinx-rtd-theme = "^0.5.1"
+pip = "^21.0.1"
+spacy = "^3.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
 [tool.poetry.scripts]
-parse2sens = "subtitlecore.entry:parse2sens"
-parse2text = "subtitlecore.entry:parse2text"
+parse2sens = "entry:parse2sens"
+parse2text = "entry:parse2text"
+get_subtitle_content = "entry:get_subtitle_content"
 
 
 [build-system]
