--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "subtitlecore"
-version = "0.1.6"
+version = "0.1.7"
 description = "Parse srt file content into well-formed structures"
 authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
+repository = "https://github.com/qishe-nlp/subtitlecore"
+readme = "README.md"
+documentation = "https://qishe-nlp.github.io/subtitlecore/"
+keys = ["subtitle", "parse", "srt"] 
 
 [tool.poetry.dependencies]
 python = "^3.8"
