--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "subtitlecore"
-version = "0.1.11"
+version = "0.1.12"
 description = "Parse srt file content into well-formed structures"
 authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
 repository = "https://github.com/qishe-nlp/subtitlecore"
@@ -12,13 +12,13 @@ keywords = ["subtitle", "parse", "srt"]
 python = "^3.8"
 webvtt-py = "^0.4.3"
 click = "^7.1.1"
-pip = "^21.0.1"
-spacy = "^3.1.0"
+spacy = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-Sphinx = "^3.5.3"
-sphinx-rtd-theme = "^0.5.1"
+Sphinx = "^6.1.3"
+sphinx-rtd-theme = "^1.2.0"
+sphinxcontrib-jquery = "^4.1"
 
 [tool.poetry.scripts]
 subtitlecore_parse2sens = "subtitlecore.entry:parse2sens"
