--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "subtitlecore"
-version = "0.1.14"
+version = "0.1.15"
 description = "Parse srt file content into well-formed structures"
 authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
 repository = "https://github.com/qishe-nlp/subtitlecore"
@@ -9,15 +9,15 @@ documentation = "https://qishe-nlp.github.io/subtitlecore/"
 keywords = ["subtitle", "parse", "srt"] 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.12"
 webvtt-py = "^0.4.3"
 click = "^8.0.3"
-spacy = "^3.5.0"
+spacy = "3.7.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-Sphinx = "^6.1.3"
-sphinx-rtd-theme = "^1.2.0"
+pytest = "^8.1"
+Sphinx = "^8.1.3"
+sphinx-rtd-theme = "^3.0.2"
 sphinxcontrib-jquery = "^4.1"
 
 [tool.poetry.scripts]
@@ -27,6 +27,6 @@ subtitlecore_content = "subtitlecore.entry:get_subtitle_content"
 
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.masonry.api"
 
